--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,26 @@ h1,h2,h3,p,span {
   justify-content: center;
   gap: 10px;
 }
+
+.section-black {
+  background-color: #000000; /* Cor de fundo preta */
+}
+
+.section-white {
+  background-color: #ffffff; /* Cor de fundo branca */
+  position: relative;
+  overflow: hidden;
+}
+
+.section-white-before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff; /* Cor de fundo branca */
+  transform-origin: bottom right;
+  transform: skewY(-5deg);
+  z-index: -1;
+}
