--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,45 @@ h1,h2,h3,p,span {
   transform: skewY(-5deg);
   z-index: -1;
 }
+
+/* RADIX ANIMATION */
+
+.CollapsibleContent {
+  @apply overflow-hidden;
+}
+
+.CollapsibleContent[data-state='open'] {
+  @apply animate-slideDown;
+}
+
+.CollapsibleContent[data-state='closed'] {
+  @apply animate-slideUp;
+}
+
+@keyframes slideDown {
+  from {
+    height: 0;
+  }
+  to {
+    height: var(--radix-collapsible-content-height);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    height: var(--radix-collapsible-content-height);
+  }
+  to {
+    height: 0;
+  }
+}
+
+@layer utilities {
+  .animate-slideDown {
+    animation: slideDown 300ms ease-out;
+  }
+
+  .animate-slideUp {
+    animation: slideUp 300ms ease-out;
+  }
+}
