--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,28 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  -text-rendering: optimizeLegibility;
-  
-  
+  -text-rendering: optimizeLegibility;  
+  ::-webkit-scrollbar {
+  width: 8px; /* Largura da barra de rolagem */
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:#1F2A68; /* Cor do polegar da barra de rolagem */
+  border-radius: 4px; /* Raio da borda do polegar */
+  width: 8px;
+  width: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: darkblue; /* Cor do polegar da barra de rolagem ao passar o mouse */
+}
+
+/* Estilo para a barra de rolagem horizontal (opcional) */
+::-webkit-scrollbar-track {
+  background-color: lightgray; /* Cor de fundo da barra de rolagem */
+  width: 4px;
+}
 }
 
 .gratiantHero {
@@ -78,7 +97,7 @@ h1,h2,h3,p,span {
 /* RADIX ANIMATION */
 
 .CollapsibleContent {
-  @apply overflow-hidden;
+  @apply overflow-y-auto;
 }
 
 .CollapsibleContent[data-state='open'] {
